[gd_scene load_steps=7 format=3 uid="uid://do8m0remgx4og"]

[ext_resource type="Script" path="res://objects/buildings/repairer/repairer.gd" id="1_u3vx5"]
[ext_resource type="Texture2D" uid="uid://c0fwkkdoghnm6" path="res://objects/buildings/friendly_turret_base.png" id="2_dk0hd"]
[ext_resource type="PackedScene" uid="uid://7t4at5tsxrvm" path="res://objects/smoke/smoke.tscn" id="3_irwpv"]
[ext_resource type="PackedScene" uid="uid://bg65k1pq8wpju" path="res://objects/healthbar/healthbar.tscn" id="4_wltjw"]

[sub_resource type="Curve" id="Curve_jetkp"]
_data = [Vector2(0, 0.984906), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mu00l"]
size = Vector2(16, 16)

[node name="Repairer" type="StaticBody2D" groups=["Building"]]
z_index = 1
script = ExtResource("1_u3vx5")
reach = 100

[node name="Base" type="Sprite2D" parent="."]
z_index = -1
texture = ExtResource("2_dk0hd")

[node name="Head" type="AnimatedSprite2D" parent="."]

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="VisibilityTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Smoke" parent="." instance=ExtResource("3_irwpv")]
scale_amount_curve = SubResource("Curve_jetkp")

[node name="Healthbar" parent="." instance=ExtResource("4_wltjw")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_mu00l")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="VisibilityTimer" to="." method="_on_visibility_timer_timeout"]
